--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "animate.css": "^4.1.1",
+    "axios": "^1.2.0",
     "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "moment-es6": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-login": "^5.2.2",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
