--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "animate.css": "^4.1.1",
-    "axios": "^1.2.0",
     "formik": "^2.2.9",
+    "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "moment-es6": "^1.0.0",
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "axios": "^1.2.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
   }
